fixed word wrapping css in ImageListItemProject for small screens

--- a/src/components/ImageListItemProject/ImageListItemProject.scss
+++ b/src/components/ImageListItemProject/ImageListItemProject.scss
@@ -5,7 +5,6 @@
   h1{
     // padding-left: 50%;
     text-align: center;
-
   }
 
   .InputH1 {
@@ -17,10 +16,14 @@
     flex-wrap: wrap;
     flex-direction: column;
 
+
     div{
       text-align: center;
     }
     p{
+      
+      line-height: normal;
+      word-wrap: break-word;
       text-align: center;
     }
   }
